[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/back.png" type="Texture" id=1]
[ext_resource path="res://assets/button.png" type="Texture" id=2]
[ext_resource path="res://gameover/VoltarButton.gd" type="Script" id=3]
[ext_resource path="res://gameover/JogarNovamenteButton.gd" type="Script" id=4]
[ext_resource path="res://gameover/Score.gd" type="Script" id=5]

[node name="GameOver" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite" parent="CanvasLayer"]
position = Vector2( 512, 300.5 )
scale = Vector2( 0.5, 0.389974 )
texture = ExtResource( 1 )

[node name="JogarNovamenteButton" type="Button" parent="CanvasLayer"]
margin_left = 420.0
margin_top = 367.0
margin_right = 589.0
margin_bottom = 411.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/JogarNovamenteButton"]
position = Vector2( 89.5, 23.5 )
scale = Vector2( 0.854077, 0.525773 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/JogarNovamenteButton"]
modulate = Color( 0.356863, 0.0784314, 0.545098, 1 )
margin_right = 168.0
margin_bottom = 44.0
text = "Jogar novamente"
align = 1
valign = 1

[node name="VoltarButton" type="Button" parent="CanvasLayer"]
margin_left = 420.0
margin_top = 430.0
margin_right = 589.0
margin_bottom = 474.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/VoltarButton"]
position = Vector2( 88.5, 25.5 )
scale = Vector2( 0.871245, 0.56701 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/VoltarButton"]
modulate = Color( 0.356863, 0.0784314, 0.545098, 1 )
margin_right = 168.0
margin_bottom = 47.0
text = "Voltar ao menu"
align = 1
valign = 1

[node name="GameOver" type="Label" parent="CanvasLayer"]
margin_left = 354.0
margin_top = 194.0
margin_right = 427.0
margin_bottom = 208.0
rect_scale = Vector2( 4, 4 )
text = "Game Over"
align = 1
valign = 1

[node name="LabelScore" type="Label" parent="CanvasLayer"]
margin_left = 456.0
margin_top = 284.0
margin_right = 497.0
margin_bottom = 298.0
rect_scale = Vector2( 2, 2 )
text = "Score:"
align = 1
valign = 1

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 545.0
margin_top = 283.0
margin_right = 585.0
margin_bottom = 297.0
rect_scale = Vector2( 2, 2 )
valign = 1
script = ExtResource( 5 )

[connection signal="mouse_entered" from="CanvasLayer/JogarNovamenteButton" to="CanvasLayer/JogarNovamenteButton" method="_on_JogarNovamenteButton_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/JogarNovamenteButton" to="CanvasLayer/JogarNovamenteButton" method="_on_JogarNovamenteButton_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/JogarNovamenteButton" to="CanvasLayer/JogarNovamenteButton" method="_on_JogarNovamenteButton_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/VoltarButton" to="CanvasLayer/VoltarButton" method="_on_VoltarButton_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/VoltarButton" to="CanvasLayer/VoltarButton" method="_on_VoltarButton_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/VoltarButton" to="CanvasLayer/VoltarButton" method="_on_VoltarButton_pressed"]
